chore: adjusts content width

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -24,10 +24,7 @@
   --color-pink-dark-button: color.scale(#ff0bb6, -20%);
 
   // size
-  --width-default: 50vw;
-  --height-default: 55vh;
-  --width-min: 225px;
-  --height-min: 280px;
+  --width-default: 600px;
 
   // border
   --border-default-width: 1px;
