chore: adds imgs to btns

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,6 +22,7 @@
   --color-cyan-dark-button: color.scale(#00ffff, -20%);
   --color-pink-button: #ff0bb6;
   --color-pink-dark-button: color.scale(#ff0bb6, -20%);
+  --color-transparent: rgba(#fff, 0);
 
   // size
   --width-default: 600px;
